--- a/appspec.yml
+++ b/appspec.yml
@@ -1,7 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: /
+  - source: /webappfiles
     destination: /var/www/html/
 file_exists_behavior: OVERWRITE
 hooks:
