Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,8 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- checkout: self
+  submodules: true
 - task: AzureStaticWebApp@0
   inputs:
     app_location: 'webappfiles'
