--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
 - task: AzureStaticWebApp@0
   inputs:
     app_location: 'webappfiles'
-    azure_static_web_apps_api_token: = $(deployment_token)
+    azure_static_web_apps_api_token: = $(deploymentToken)
 
 - task: ArchiveFiles@2
   inputs:
